2004-09-06  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: reduce number of left over tasks after cleaning due to
	  Luke Macken modifications.

2004-09-06  Luke Macken <lewk@csh.rit.edu>

	* SMTask.cc, SMTask.h, SignalHook.cc, SignalHook.h, log.cc, log.h:
	  add Cleanup methods.
	* lftp.cc: use them.

2004-09-06  Alexander V. Lukyanov <lav@yars.free.net>

	* Resolver.cc: use dn_expand if available.

2004-08-31  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: make sure the file is created in FileCopyPeerFDStream
	  before setting done.

2004-08-30  Alexander V. Lukyanov <lav@yars.free.net>

	* url.cc: make nice orig_url in case of bm: scheme, so that
	  get `bm:<web-bookmark>/?arg=value' works well.

2004-08-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: add closure to cache-control setting.
	* resource.cc: add hftp:cache-control.
	* Fish.cc, Http.cc: fail store if application tries to write more than
	  requested originally.

2004-08-12  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h, resource.cc: add http:authorization setting.

2004-08-03  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer_std.cc, buffer_std.h: new files.
	* Makefile.am: add buffer_std.* files.
	* FindJob.cc, FindJobDu.cc: use IOBuffer_STDOUT.
	* LocalAccess.cc: workaround solaris nfs bug in case of ENOSPC.
	* SMTask.cc: little optimization for timeout==0.
	* SysCmdJob.cc: return proper error code.
	* buffer.cc, buffer.h: add generic IOBuffer::Do, remove
	  IOBufferFDStream::Do and IOBufferFileAccess::Do.
	* commands.cc: don't create FDStream for stdout in CMD(du).
	* ftpclass.cc: don't bind data socket according to net:socket-bind-*;
	  move verbose debug for bind(); take control socket address if data
	  socket is not bound to a particular address.
	* resource.cc: new setting http:cache-control.
	* Http.cc: use new setting http:cache-control; handle 503 Gateway
	  timeout specially if only-if-cached is specified.