@@ -645,10 +645,12 @@ int Fish::HandleReplies()
    {
       if(state==CONNECTING_1)
       {
-	 const char *p="password: ";
-	 const char *y="(yes/no)? ";
+	 const char *p="password:";
+	 const char *y="(yes/no)?";
 	 int p_len=strlen(p);
 	 int y_len=strlen(y);
+	 if(s>0 && b[s-1]==' ')
+	    s--;
 	 if(s>=p_len && !strncasecmp(b+s-p_len,p,p_len)
 	 || s>10 && !strncmp(b+s-3,"': ",3))
 	 {
